<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:orientation="vertical"
    android:background="@color/Background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/MenuTitle"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btnMenuFruits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/fruits"
        android:backgroundTint="@color/button_color"/>

    <Button
        android:id="@+id/btnMenuColors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/colors"
        android:backgroundTint="@color/button_color"/>

    <Button
        android:id="@+id/btnMenuAnimals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/animals"
        android:backgroundTint="@color/button_color"/>


</LinearLayout>